parser/langX.java
/* Generated By:JavaCC: Do not edit this line. langX.java */
package parser;
import java.io.*;


public class langX implements langXConstants {
final static String Version = "X++ Compiler - Version 1.0 - 2004";
int contParseError = 0;           // contador de erros sintáticos


// Define o método "main" da classe langX.  
  public  static void main(String args[]) throws ParseException
  {
  boolean debug = false;

    String filename = ""; // nome do arquivo a ser analisado
    langX parser;     // analisador léxico/sintático
    int i;
    boolean ms = false;

    System.out.println(Version);
    // lê os parâmetros passados para o compilador
    for (i = 0; i < args.length - 1; i++)
    {
    if (args[i].equals("-debug_AS") )
            debug = true;
    else
        {
            System.out.println("Usage is: java langX [-debug_AS] inputfile");
            System.exit(0);
        }
    }

    if (args[i].equals("-"))
    {       // lê da entrada padrão      
        System.out.println("Reading from standard input . . .");
        parser = new langX(System.in); // cria AS
     }
     else
    {       // lê do arquivo
        filename = args[args.length-1];
        System.out.println("Reading from file " + filename + " . . .");
        try {  // cria AS
            parser = new langX(new java.io.FileInputStream(filename));
        }
    catch (java.io.FileNotFoundException e) {
               System.out.println("File " + filename + " not found.");
        return;
        }
    }

    if (! debug) parser.disable_tracing(); // desabilita verbose do AS

    try {
        parser.program();   // chama o método que faz a análise
    }
    catch (ParseException e)
    {
    System.err.println(e.getMessage());
    parser.contParseError = 1;   // não existe recuperação de erros
    }
    finally {
        System.out.println(parser.token_source.foundLexError() +
                                " Lexical Errors found");
        System.out.println(parser.contParseError + " Syntactic Errors found");
     }

}  // main

static public String im(int x)
{
int k;
String s;
   s = tokenImage[x];
   k = s.lastIndexOf("\u005c"");
   try {s = s.substring(1,k);}
   catch (StringIndexOutOfBoundsException e)
   {}
   return s;
}

  final public void program() throws ParseException {
    trace_call("program");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        classlist();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
    } finally {
      trace_return("program");
    }
  }

  final public void classlist() throws ParseException {
    trace_call("classlist");
    try {
      classdecl();
      if (jj_2_1(2)) {
        classlist();
      } else {
        ;
      }
    } finally {
      trace_return("classlist");
    }
  }

  final public void classdecl() throws ParseException {
    trace_call("classdecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          jj_consume_token(PUBLIC);
          break;
        case PRIVATE:
          jj_consume_token(PRIVATE);
          break;
        case PROTECTED:
          jj_consume_token(PROTECTED);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(CLASS);
      jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
        jj_consume_token(IDENT);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      classbody();
    } finally {
      trace_return("classdecl");
    }
  }

  final public void classbody() throws ParseException {
    trace_call("classbody");
    try {
      jj_consume_token(LBRACE);
      if (jj_2_2(2)) {
        classlist();
      } else {
        ;
      }
      label_1:
      while (true) {
        if (jj_2_3(3)) {
          ;
        } else {
          break label_1;
        }
        vardecl();
        jj_consume_token(SEMICOLON);
      }
      label_2:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_2;
        }
        atribstat();
        jj_consume_token(SEMICOLON);
      }
      label_3:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_3;
        }
        constructdecl();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case STRING:
        case CHAR:
        case BOOLEAN:
        case DOUBLE:
        case BYTE:
        case SHORT:
        case LONG:
        case FLOAT:
        case FINAL:
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
        case IDENT:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        methoddecl();
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("classbody");
    }
  }

  final public void vardecl() throws ParseException {
    trace_call("vardecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          jj_consume_token(PUBLIC);
          break;
        case PRIVATE:
          jj_consume_token(PRIVATE);
          break;
        case PROTECTED:
          jj_consume_token(PROTECTED);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FINAL:
        jj_consume_token(FINAL);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case DOUBLE:
      case BYTE:
      case SHORT:
      case LONG:
      case FLOAT:
        primitivetype();
        break;
      case IDENT:
        jj_consume_token(IDENT);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(IDENT);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_5;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENT);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[11] = jj_gen;
            break label_7;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
      }
    } finally {
      trace_return("vardecl");
    }
  }

  final public void constructdecl() throws ParseException {
    trace_call("constructdecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          jj_consume_token(PUBLIC);
          break;
        case PRIVATE:
          jj_consume_token(PRIVATE);
          break;
        case PROTECTED:
          jj_consume_token(PROTECTED);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(CONSTRUCTOR);
      methodbody();
    } finally {
      trace_return("constructdecl");
    }
  }

  final public void methoddecl() throws ParseException {
    trace_call("methoddecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          jj_consume_token(PUBLIC);
          break;
        case PRIVATE:
          jj_consume_token(PRIVATE);
          break;
        case PROTECTED:
          jj_consume_token(PROTECTED);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FINAL:
        jj_consume_token(FINAL);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case DOUBLE:
      case BYTE:
      case SHORT:
      case LONG:
      case FLOAT:
        primitivetype();
        break;
      case IDENT:
        jj_consume_token(IDENT);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_8;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
      jj_consume_token(IDENT);
      methodbody();
    } finally {
      trace_return("methoddecl");
    }
  }

  final public void methodbody() throws ParseException {
    trace_call("methodbody");
    try {
      jj_consume_token(LPAREN);
      paramlist();
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("methodbody");
    }
  }

  final public void paramlist() throws ParseException {
    trace_call("paramlist");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case DOUBLE:
      case BYTE:
      case SHORT:
      case LONG:
      case FLOAT:
      case IDENT:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case STRING:
        case CHAR:
        case BOOLEAN:
        case DOUBLE:
        case BYTE:
        case SHORT:
        case LONG:
        case FLOAT:
          primitivetype();
          break;
        case IDENT:
          jj_consume_token(IDENT);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(IDENT);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[20] = jj_gen;
            break label_9;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_10;
          }
          jj_consume_token(COMMA);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case STRING:
          case CHAR:
          case BOOLEAN:
          case DOUBLE:
          case BYTE:
          case SHORT:
          case LONG:
          case FLOAT:
            primitivetype();
            break;
          case IDENT:
            jj_consume_token(IDENT);
            break;
          default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(IDENT);
          label_11:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[23] = jj_gen;
              break label_11;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
        }
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
    } finally {
      trace_return("paramlist");
    }
  }

  final public void statement() throws ParseException {
    trace_call("statement");
    try {
      if (jj_2_6(2)) {
        vardecl();
        jj_consume_token(SEMICOLON);
      } else if (jj_2_7(3)) {
        atribstat();
        jj_consume_token(SEMICOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PRINT:
          printstat();
          jj_consume_token(SEMICOLON);
          break;
        case READ:
          readstat();
          jj_consume_token(SEMICOLON);
          break;
        case RETURN:
          returnstat();
          jj_consume_token(SEMICOLON);
          break;
        case SUPER:
          superstat();
          jj_consume_token(SEMICOLON);
          break;
        case IF:
          ifstat();
          break;
        case FOR:
          forstat();
          break;
        case LBRACE:
          jj_consume_token(LBRACE);
          statlist();
          jj_consume_token(RBRACE);
          break;
        case BREAK:
          jj_consume_token(BREAK);
          jj_consume_token(SEMICOLON);
          break;
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        case IDENT:
          methodcall();
          jj_consume_token(SEMICOLON);
          break;
        case DO:
          dowhilestat();
          jj_consume_token(SEMICOLON);
          break;
        case WHILE:
          whilestat();
          break;
        case SWITCH:
          switchstat();
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("statement");
    }
  }

//mudanca
  final public void methodcall() throws ParseException {
    trace_call("methodcall");
    try {
      jj_consume_token(IDENT);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_12;
        }
        jj_consume_token(DOT);
        jj_consume_token(IDENT);
      }
      jj_consume_token(LPAREN);
      paramlist();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("methodcall");
    }
  }

  final public void atribstat() throws ParseException {
    trace_call("atribstat");
    try {
      lvalue();
      jj_consume_token(ASSIGN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
        alocexpression();
        break;
      default:
        jj_la1[27] = jj_gen;
        if (jj_2_8(3)) {
          logicexpression();
        } else if (jj_2_9(3)) {
          methodcall();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("atribstat");
    }
  }

  final public void printstat() throws ParseException {
    trace_call("printstat");
    try {
      jj_consume_token(PRINT);
      logicexpression();
    } finally {
      trace_return("printstat");
    }
  }

  final public void readstat() throws ParseException {
    trace_call("readstat");
    try {
      jj_consume_token(READ);
      lvalue();
    } finally {
      trace_return("readstat");
    }
  }

  final public void returnstat() throws ParseException {
    trace_call("returnstat");
    try {
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_constant:
      case string_constant:
      case null_constant:
      case boolean_constant:
      case char_constant:
      case double_constant:
      case byte_constant:
      case short_constant:
      case long_constant:
      case float_constant:
      case IDENT:
      case LPAREN:
      case PLUS:
      case MINUS:
      case NOT:
        logicexpression();
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
      }
    } finally {
      trace_return("returnstat");
    }
  }

  final public void superstat() throws ParseException {
    trace_call("superstat");
    try {
      jj_consume_token(SUPER);
      jj_consume_token(LPAREN);
      arglist();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("superstat");
    }
  }

  final public void ifstat() throws ParseException {
    trace_call("ifstat");
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      logicexpression();
      jj_consume_token(RPAREN);
      statement();
      if (jj_2_10(2)) {
        jj_consume_token(ELSE);
        statement();
      } else {
        ;
      }
    } finally {
      trace_return("ifstat");
    }
  }

  final public void forstat() throws ParseException {
    trace_call("forstat");
    try {
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        atribstat();
        break;
      default:
        jj_la1[29] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
      if (jj_2_11(3)) {
        logicexpression();
      } else {
        ;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        atribstat();
        break;
      default:
        jj_la1[30] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("forstat");
    }
  }

  final public void whilestat() throws ParseException {
    trace_call("whilestat");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      logicexpression();
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("whilestat");
    }
  }

  final public void dowhilestat() throws ParseException {
    trace_call("dowhilestat");
    try {
      jj_consume_token(DO);
      statement();
      jj_consume_token(LPAREN);
      logicexpression();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("dowhilestat");
    }
  }

  final public void switchstat() throws ParseException {
    trace_call("switchstat");
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(LPAREN);
      jj_consume_token(IDENT);
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
        case DEFAULTT:
          ;
          break;
        default:
          jj_la1[31] = jj_gen;
          break label_13;
        }
        switchcasestat();
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("switchstat");
    }
  }

  final public void switchcasestat() throws ParseException {
    trace_call("switchcasestat");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
        jj_consume_token(CASE);
        factor();
        break;
      case DEFAULTT:
        jj_consume_token(DEFAULTT);
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(DOISP);
      statement();
    } finally {
      trace_return("switchcasestat");
    }
  }

  final public void statlist() throws ParseException {
    trace_call("statlist");
    try {
      statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
      case FOR:
      case IF:
      case INT:
      case PRINT:
      case READ:
      case RETURN:
      case STRING:
      case SUPER:
      case WHILE:
      case DO:
      case SWITCH:
      case CHAR:
      case BOOLEAN:
      case DOUBLE:
      case BYTE:
      case SHORT:
      case LONG:
      case FLOAT:
      case FINAL:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
      case IDENT:
      case LBRACE:
      case SEMICOLON:
        statlist();
        break;
      default:
        jj_la1[33] = jj_gen;
        ;
      }
    } finally {
      trace_return("statlist");
    }
  }
